# Just-some-shii

./: README.md
backend/: database.db  pyproject.toml  requirements.txt  server.py
backend/chroma_langchain_db/: chroma.sqlite3
backend/src/: .env  ai_generator.py  app.py  utils.py  vector.py
backend/src/database/: db.py  models.py
backend/src/routes/: challenge.py  webhooks.py
frontend/: .env  package-lock.json
frontend/src/: App.css  App.jsx
frontend/src/Challenge/: ChallengeGenerator.jsx  MCQChallenge.jsx
frontend/src/auth/: Authenticationpage.jsx  ClerkProviderWithRoutes.jsx
frontend/src/history/: HistoryPanel.jsx
frontend/src/layout/: Layout.jsx
frontend/src/utils/: api.js
