[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==2.2.5",
    "clerk-backend-api>=3.0.0",
    "fastapi>=0.109.0",
    "langchain>=0.3.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.25",
    "pydantic>=2.0.0",
]
